<resources>
    <string name="app_name">ex1</string>
    <string name="str1">This activity demonstrates the use of Relative Layout with two internal Liner Layouts</string>
    <string name="str2">Your Name:</string>
    <string name="str3">Press me!</string>
    <string name="str4">Option1</string>
    <string name="str5">Option2</string>
    <string name="str6">Option3</string>
    <string name="str7">Alternative1</string>
    <string name="str8">Alternative2</string>
</resources>
